--- a/roles/packages/tasks/new.yml
+++ b/roles/packages/tasks/new.yml
@@ -9,5 +9,27 @@
       - "wget"
       - "@Fonts"
       - "@Multimedia"
+      - "'@Printing Client'"
       - "nfs-utils"
+      - "net-tools"
       - "totem-mozplugin"
+      - "libreoffice-calc"
+      - "libreoffice-core"
+      - "libreoffice-draw"
+      - "libreoffice-graphicfilter"
+      - "libreoffice-impress"
+      - "libreoffice-opensymbol-fonts"
+      - "libreoffice-pdfimport"
+      - "libreoffice-pyuno"
+      - "libreoffice-ure"
+      - "libreoffice-writer"
+      - "libpng12"
+      - "compat-libtiff3"
+      - "compat-glibc-headers"
+      - "compat-libgfortran-41"
+      - "compat-gcc-44"
+      - "compat-gcc-44-c++"
+      - "compat-gcc-44-gfortran"
+      - "compat-glibc"
+      - "compat-libf2c-34"
+      - "gnome-colors-icon-theme"
