--- a/roles/packages/tasks/new.yml
+++ b/roles/packages/tasks/new.yml
@@ -9,10 +9,9 @@
       - "wget"
       - "@Fonts"
       - "@Multimedia"
-      - "'@Printing Client'"
+      - "@printing-client"
       - "nfs-utils"
       - "net-tools"
-      - "totem-mozplugin"
       - "libreoffice-calc"
       - "libreoffice-core"
       - "libreoffice-draw"
