--- a/roles/repos/defaults/main.yml
+++ b/roles/repos/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 
-epel_repo_url: "http://download.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-9.noarch.rpm"
+epel_repo_url: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm"
 epel_repo_gpg_key_url: "/etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-7"
 
-elrepo_url: "http://www.elrepo.org/elrepo-release-7.0-2.el7.elrepo.noarch.rpm"
+elrepo_url: "http://www.elrepo.org/elrepo-release-7.0-3.el7.elrepo.noarch.rpm"
 elrepo_gpg_key_url: "https://www.elrepo.org/RPM-GPG-KEY-elrepo.org"
